# balanceray

./: .gitignore  README.md  docker-compose.yml
backend/: Makefile  README.md  go.mod  go.sum  gqlgen.yml  sqlc.yaml
backend/cmd/server/: main.go
backend/internal/graph/: generated.go  helpers.go  resolver.go  schema.graphqls  schema.resolvers.go
backend/internal/graph/model/: models_gen.go
backend/internal/repository/db/: migrate.go  models.go  querier.go  query.sql.go  store.go
backend/internal/services/: asset_service.go  asset_service_test.go
backend/sql/: embed.go
backend/sql/migrations/: 000001_create_assets_schema.down.sql  000001_create_assets_schema.up.sql
backend/sql/queries/: query.sql
proto/: market_data.proto
sidecars/market-data-yf/: README.md  market_data_pb2.py  market_data_pb2_grpc.py  pyproject.toml  server.py
